--- a/shop/contact.html
+++ b/shop/contact.html
@@ -24,8 +24,8 @@
           <a href="shop.html" class="menu-item">Shop</a>
           <a href="cart.html" class="menu-item">Cart</a>
           <a href="myOrder.html" class="menu-item">My Order</a>
-          <a href="faq.html" class="menu-item active">FAQ</a>
-          <a href="contact.html" class="menu-item">1:1</a>
+          <a href="faq.html" class="menu-item">FAQ</a>
+          <a href="contact.html" class="menu-item active">1:1</a>
         </div>
         <div class="dim"></div>
       </header>
@@ -48,7 +48,7 @@
                   <span>A</span><p>반려생활의 모든 것을 해결해줄 단 하나의 서비스, 내 반려동물 관리, 지출, 진료, 쇼핑까지 가능한 스마트펫라이프입니다.</p>
                 </div>
                 <div class="edit-del">
-                  <a class="edit">수정</a>
+                  <a href="edit.html" class="edit">수정</a>
                   <a class="del">삭제</a>
                 </div>
               </div>
@@ -67,7 +67,7 @@
                   <span>A</span><p>반려생활의 모든 것을 해결해줄 단 하나의 서비스, 내 반려동물 관리, 지출, 진료, 쇼핑까지 가능한 스마트펫라이프입니다.</p>
                 </div>
                 <div class="edit-del">
-                  <a class="edit">수정</a>
+                  <a href="edit.html" class="edit">수정</a>
                   <a class="del">삭제</a>
                 </div>
               </div>
@@ -86,7 +86,7 @@
                   <span>A</span><p>반려생활의 모든 것을 해결해줄 단 하나의 서비스, 내 반려동물 관리, 지출, 진료, 쇼핑까지 가능한 스마트펫라이프입니다.</p>
                 </div>
                 <div class="edit-del">
-                  <a class="edit">수정</a>
+                  <a href="edit.html" class="edit">수정</a>
                   <a class="del">삭제</a>
                 </div>
               </div>
