--- a/shop/contact.html
+++ b/shop/contact.html
@@ -92,7 +92,7 @@
               </div>
             </li>
           </ul>
-          <a href="" class="btn">문의하기</a>
+          <a href="edit.html" class="btn">문의하기</a>
         </article>
       </section>
       <footer>
