--- a/shop/edit.html
+++ b/shop/edit.html
@@ -53,7 +53,7 @@
               <textarea placeholder="내용을 입력해주세요." onkeyup="chkLength(this);" onkeypress="chkEnter();"></textarea>
               <p class="txt-length"><span>0</span> / 1,000 자</p>
             </div>
-            <a class="btn">등록</a>
+            <a class="reg btn">등록</a>
           </div>
         </article>
       </section>
@@ -86,12 +86,10 @@
   <div class="popup">
     <div class="dim"></div>
     <div class="inner">
-      <div class="del-inner">
-        <p>해당 글을 삭제하시겠습니까?</p>
-        <div class="btns">
-          <a class="cancel-btn">취소</a>
-          <a class="del-btn">삭제</a>
-        </div>
+      <div class="comp-inner">
+        <img src="../shop/images/mo/ico-chkd-green.svg" alt="">
+        <p>등록이 완료되었습니다.</p>
+        <a class="confirm">확인</a>
       </div>
     </div>
   </div>
@@ -145,6 +143,16 @@
         event.returnValue = false;
       }
     }
+
+    let reg = document.querySelector('.reg');
+    let popup = document.querySelector('.popup');
+    let confirm = document.querySelector('.confirm');
+    reg.addEventListener('click', function() {
+      popup.classList.add('on');
+    });
+    confirm.addEventListener('click', function() {
+      popup.classList.remove('on');
+    });
   </script>
 </body>
 </html>
