--- a/shop/orderDetail.html
+++ b/shop/orderDetail.html
@@ -27,6 +27,8 @@
           <a href="shop.html" class="menu-item">Shop</a>
           <a href="cart.html" class="menu-item">Cart</a>
           <a href="myOrder.html" class="menu-item active">My Order</a>
+          <a href="faq.html" class="menu-item">FAQ</a>
+          <a href="contact.html" class="menu-item">1:1</a>
         </div>
         <div class="dim"></div>
       </header>
@@ -52,7 +54,7 @@
                 </div>
                 <div class="quantity">
                   <p>Quantity</p>
-                  <input type="number" min="1" value="1" disabled>
+                  <input type="number" min="1" value="1">
                 </div>
               </li>
             </ul>
@@ -61,25 +63,25 @@
         <article class="orderer">
           <p class="tit">주문자 정보</p>
           <p class="sub-tit">주문자</p>
-          <input type="text" value="홍길동" disabled>
+          <input type="text" value="홍길동">
           <p class="sub-tit">연락처</p>
-          <input type="text" value="01012345678" disabled>
+          <input type="text" value="01012345678">
           <p class="sub-tit">이메일(선택)</p>
-          <input type="text" value="abc123@naver.com" disabled>
+          <input type="text" value="abc123@naver.com">
 
           <p class="tit">배송정보</p>
           <p class="sub-tit">받으시는 분</p>
-          <input type="text" value="홍길동" disabled>
+          <input type="text" value="홍길동">
           <p class="sub-tit">연락처</p>
-          <input type="text" value="01012345678" disabled>
+          <input type="text" value="01012345678">
           <div class="add">
             <p class="sub-tit">주소지</p>
             <input type="text" name="address" id="address" value="서울 강남구 도곡로 138 서울 강남구 도곡로 138 서울 강남구 도곡로 138 서울 강남구 도곡로 138">
             <input type="button" value="우편번호 검색">
-            <input type="text" value="1층" disabled>
+            <input type="text" value="1층">
           </div>
           <p class="sub-tit">이메일(선택)</p>
-          <input type="text" value="abc123@naver.com" disabled>
+          <input type="text" value="abc123@naver.com">
 
           <a href="main.html" class="main-go">메인으로 이동</a>
         </article>
