--- a/shop/shopDetail.html
+++ b/shop/shopDetail.html
@@ -24,6 +24,8 @@
           <a href="shop.html" class="menu-item active">Shop</a>
           <a href="cart.html" class="menu-item">Cart</a>
           <a href="myOrder.html" class="menu-item">My Order</a>
+          <a href="faq.html" class="menu-item">FAQ</a>
+          <a href="contact.html" class="menu-item">1:1</a>
         </div>
         <div class="dim"></div>
       </header>
@@ -50,13 +52,8 @@
             </div>
             <div class="quantity">
               <p>Quantity</p>
-<!--              <div class="num-wrap">-->
-<!--                <span class="up"></span>-->
-<!--                <span class="down"></span>-->
-<!--                <input type="number" min="0" placeholder="0">-->
-<!--              </div>-->
               <div class="num-select">
-                <a class="label">0</a>
+                <a class="label">1</a>
                 <ul class="opt-list">
                   <li class="opt-item">1</li>
                   <li class="opt-item">2</li>
