--- a/shop/order.html
+++ b/shop/order.html
@@ -27,6 +27,8 @@
           <a href="shop.html" class="menu-item">Shop</a>
           <a href="cart.html" class="menu-item">Cart</a>
           <a href="myOrder.html" class="menu-item">My Order</a>
+          <a href="faq.html" class="menu-item">FAQ</a>
+          <a href="contact.html" class="menu-item">1:1</a>
         </div>
         <div class="dim"></div>
       </header>
@@ -54,7 +56,7 @@
                   <p>Quantity</p>
                   <div class="num-wrap">
                     <a class="up"></a>
-                    <input type="number" min="0" value="1">
+                    <input type="number" min="1" value="1">
                     <a class="down"></a>
                   </div>
                 </div>
@@ -194,7 +196,7 @@
     Array.prototype.forEach.call(inc, function(e){
       e.addEventListener('click', function() {
         let input = e.parentNode.children[1]
-        if(input.value <= 0) {return}
+        if(input.value <= 1) {return}
         input.value = parseInt(input.value) - 1;
       })
     });
