--- a/shop/shop.html
+++ b/shop/shop.html
@@ -24,6 +24,8 @@
           <a href="shop.html" class="menu-item active">Shop</a>
           <a href="cart.html" class="menu-item">Cart</a>
           <a href="myOrder.html" class="menu-item">My Order</a>
+          <a href="faq.html" class="menu-item">FAQ</a>
+          <a href="contact.html" class="menu-item">1:1</a>
         </div>
         <div class="dim"></div>
       </header>
