모바일 메뉴 오픈시 바디 스크롤 막기

--- a/shop/orderDetail.html
+++ b/shop/orderDetail.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="quantity">
                   <p>Quantity</p>
-                  <input type="number" min="1" value="1">
+                  <input type="number" min="1" value="1" disabled>
                 </div>
               </li>
             </ul>
@@ -63,25 +63,25 @@
         <article class="orderer">
           <p class="tit">주문자 정보</p>
           <p class="sub-tit">주문자</p>
-          <input type="text" value="홍길동">
+          <input type="text" value="홍길동" disabled>
           <p class="sub-tit">연락처</p>
-          <input type="text" value="01012345678">
+          <input type="text" value="01012345678" disabled>
           <p class="sub-tit">이메일(선택)</p>
-          <input type="text" value="abc123@naver.com">
+          <input type="text" value="abc123@naver.com" disabled>
 
           <p class="tit">배송정보</p>
           <p class="sub-tit">받으시는 분</p>
-          <input type="text" value="홍길동">
+          <input type="text" value="홍길동" disabled>
           <p class="sub-tit">연락처</p>
-          <input type="text" value="01012345678">
+          <input type="text" value="01012345678" disabled>
           <div class="add">
             <p class="sub-tit">주소지</p>
-            <input type="text" name="address" id="address" value="서울 강남구 도곡로 138 서울 강남구 도곡로 138 서울 강남구 도곡로 138 서울 강남구 도곡로 138">
+            <input type="text" name="address" id="address" value="서울 강남구 도곡로 138 서울 강남구 도곡로 138 서울 강남구 도곡로 138 서울 강남구 도곡로 138" disabled>
             <input type="button" value="우편번호 검색">
-            <input type="text" value="1층">
+            <input type="text" value="1층" disabled>
           </div>
           <p class="sub-tit">이메일(선택)</p>
-          <input type="text" value="abc123@naver.com">
+          <input type="text" value="abc123@naver.com" disabled>
 
           <a href="main.html" class="main-go">메인으로 이동</a>
         </article>
